--- a/.github/workflows/push-to-dockerhub.yml
+++ b/.github/workflows/push-to-dockerhub.yml
@@ -9,14 +9,14 @@ jobs:
   
     runs-on: ubuntu-latest
     steps:
-      - 
+      -
         name: Checkout
         uses: actions/checkout@v2
-      -       
+      -
         name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-      -     
+      -
         name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -24,16 +24,13 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      - 
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
           context: ./ 
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
