--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,9 +16,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install package including dependencies
+    - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
+    - name: Install package including dependencies
+      run: |
         pip install -e .
     - name: Test if importing package works
       run: |
