Add pylama check

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,10 +21,13 @@ jobs:
         python -m pip install --upgrade pip
     - name: Install dev/test dependencies
       run: |
-        pip install black mypy
+        pip install black mypy pylama
     - name: Run black check
       run: |
         black --check tonietools
+    - name: Run pylama
+      run: |
+        pylama --ignore=E501 tonietools
     - name: Run mypy
       run: |
         mypy --ignore-missing-imports tonietools
