--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,9 +16,23 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install package including dependencies
+    - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
+    - name: Install dev/test dependencies
+      run: |
+        pip install black mypy pylama
+    - name: Run black check
+      run: |
+        black --check tonietools
+    - name: Run pylama
+      run: |
+        pylama --ignore=E501 tonietools
+    - name: Run mypy
+      run: |
+        mypy --ignore-missing-imports tonietools
+    - name: Install package including dependencies
+      run: |
         pip install -e .
     - name: Test if importing package works
       run: |
