--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: Install dev/test dependencies
       run: |
-        pip install black mypy pylama
+        pip install -r requirements-dev.txt 
     - name: Run black check
       run: |
         black --check tonietools
