--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-oauthlib
-pydub
-requests
-requests_oauthlib
+fastapi==0.65.2
+oauthlib==3.1.1
+pydub==0.25.1
+requests==2.25.1
+requests_oauthlib==1.3.0
 spotdl==v3.6.0
-typer
-uvicorn
-youtube-dl
+typer==0.3.2
+uvicorn==0.14.0
+youtube-dl==2021.6.6
