--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,7 @@ repos:
     rev: 21.5b1
     hooks:
     -   id: black
+-   repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.3.1
+    hooks:
+    -   id: prettier
