--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,19 @@
 repos:
--   repo: https://github.com/PyCQA/isort
+  - repo: https://github.com/PyCQA/isort
     rev: 5.8.0
     hooks:
-    - id: isort
--   repo: https://github.com/pre-commit/pre-commit-hooks
+      - id: isort
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
-    -   id: trailing-whitespace
-    -   id: mixed-line-ending
--   repo: https://github.com/psf/black
+      - id: trailing-whitespace
+      - id: mixed-line-ending
+  - repo: https://github.com/psf/black
     rev: 21.5b1
     hooks:
-    -   id: black
--   repo: https://github.com/pre-commit/mirrors-prettier
+      - id: black
+        args: ["tonietools"]
+  - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.3.1
     hooks:
-    -   id: prettier
+      - id: prettier
