--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-fastapi==0.65.2
-oauthlib==3.1.1
+eyed3==0.9.6
+tonie_api @ git+https://github.com/moritzj29/tonie_api.git@d4fc2fbc451c50eb37a1616bf8a91645b2a93fc4
 pydub==0.25.1
-requests==2.25.1
-requests_oauthlib==1.3.0
-spotdl==v3.6.0
-typer==0.3.2
-uvicorn==0.14.0
+spotdl==3.9.0
 youtube-dl==2021.6.6
+youtube-search-python==1.4.9
